--- a/sent-web/src/main/resources/default.properties
+++ b/sent-web/src/main/resources/default.properties
@@ -6,4 +6,4 @@ MYSQL.PASSWORD=123456
 #÷∏±Í–¥»Îreids
 redis.host=master
 
-hbase.zookeeper.quorum=master:2181
+hbase.zookeeper.quorum=192.168.160.30:2181
