--- a/sent-compute/src/main/resources/default.properties
+++ b/sent-compute/src/main/resources/default.properties
@@ -1,3 +1,3 @@
-hbase.zookeeper.quorum=master:2181
-kafka.zookeeper.connect=master:2181
+hbase.zookeeper.quorum=192.168.160.30:2181
+kafka.zookeeper.connect=192.168.160.30:2181
 redis.host=master
